fix darkMode v2 z-index of button

--- a/css/style.css
+++ b/css/style.css
@@ -691,3 +691,6 @@ and (max-width : 480px) {
 .darkmode--activated .team-item .team-position {
     color: white;
 }
+.darkmode-toggle {
+    z-index: 100;
+}
